<resources>
    <string name="app_name">GithubUser_App</string>
    <string name="searchbar_hint">Masukkan Nama</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_home">Ini halaman Followers</string>
    <string name="content_tab_profile">Ini halaman Following</string>
    <string name="favorite_button_description">Favorite User</string>
    <string name="toolbar_name">Find Github Users</string>
    <string name="settings_button_description">Halaman Settings</string>
    <string name="toolbar_favorite_name">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="toolbar_home">"Ini halaman utama "</string>
    <string name="splash_screen">Halaman Splash Screen</string>
</resources>